Requires:
~~~~~~~~~
- CPSCore > 0.27.0 for the new URL tool.
New features:
~~~~~~~~~~~~~
- Revisited the localroles management UI.
- Added the beginning of a document on
  "HOWTO use the search capabilities of CPS".
- Folder content UI now filters elements:
    + draft elements are visible just by managers and draft creator
    + locked and draft documents cannot be suppressed
  Notice that this is just UI level and that deletion will soon
  be implemented at workflow level see ticket #228
- Added focus on the title of new documents to create in the "folder_factories"
  form.
Bug fixes:
~~~~~~~~~~
- Improved coding style in cpsinstall.py.
- #699: Fixed workflow of workspaces so that they only manage 'View'.
- #388: better fr/en translations for virtual groups labels (role:Anonymous and
  role:Authenticated)
- #307: Local roles management empty user searching ; there was no search limit
  when searching for members/groups
- #492: Removing local roles to role:Anonymous unblocked roles acquisition
- removed the textarea width set to 100% in nuxeo_css1.css.dtml (this causes a
  layout bug in firefox when displaying tooltips)
- Fixed the way CMFCalendarToolPatch.py was getting the translation_service
  tool. This has the effect to fix CPSSkins unit tests.
- Taking advantage of the new centralized CPSI18n.tests.translations module.
- Fixed translation files through the CPSI18n/bin/fix_pos script.
- Fixed the URL displayed in exportRssContentBox (was exportRSSContentBox
  instead of exportRssContentBox)
- Fixed the computeContributors() method to work properly with anonymous
  contributors, previously it was crashing.
- Merged the files nuxeo_css1.css.dtml and nuxeo_css2.css.dtml into one
  default.css.dtml file. This is a step for the fix of bug #770.
- Renamed "nuxeo_print_css.css" into "default_print.css". This fixes the last
  point of #473 (Reorganizing /skins/cps_styles/).
- Added a declaration for the stylesheet of CPSBoxes. This is a step for the fix