@@ -105,5 +105,26 @@ def upgradeWorkflows(self):
 
 def upgrade_334_335(self):
     """Upgrades for CPS 3.3.5"""
+    # upgrade repository
     from Products.CPSCore.upgrade import upgrade_334_335_repository
-    return upgrade_334_335_repository(self)
+    log = upgrade_334_335_repository(self)
+
+    # upgrade portal_url
+    from Products.CPSCore.URLTool import URLTool
+    utool_id = URLTool.id
+    portal = self.portal_url.getPortalObject()
+    utool = getToolByName(portal, utool_id, None)
+    add_it = 0
+    if utool is None:
+        add_it = 1
+    else:
+        if (utool.meta_type != URLTool.meta_type
+            or type(utool) != type(URLTool)):
+            add_it = 1
+            portal.manage_delObjects([utool_id])
+    if add_it:
+        portal.manage_addProduct['CPSCore'].manage_addTool(URLTool.meta_type)
+        log += "\n\nportal_url upgraded"
+    else:
+        log += "\n\nportal_url did not need to be upgraded"
+    return log
