@@ -1,6 +1,7 @@
 Requires:
 ~~~~~~~~~
-- CPSCore > 0.27.0 for the new URL tool.
+- CPSCore > 0.27.0 for the new URL tool: cpsupdate has to be run again to set
+  up the new tool correctly.
 New features:
 ~~~~~~~~~~~~~
 - Revisited the localroles management UI.
